Add the admin view, to show the table structure and the data, set the connection credential. Update test.

--- a/assets/css/formidable2rdb.css
+++ b/assets/css/formidable2rdb.css
@@ -44,6 +44,7 @@ select#FormidableFieldCapabilities_role {
 
 .f2r_loading {
     display: none;
+    margin-left: 10px;
 }
 
 button.check_table {
@@ -60,4 +61,20 @@ button.check_table {
 
 .f2r_table_enabled{
     width: 80px;
+}
+
+.f2r_tables_overview{
+    margin-left:15px;
+}
+
+th#rdb_id {
+    width: 5%;
+}
+
+th#created_at {
+    width: 10%;
+}
+
+th#entry_id {
+    width: 5%;
 }
