Adding woosl update and licence validation. Adding jquery validation of the action. Releasing the version 1.0.0.

--- a/assets/css/formidable2rdb.css
+++ b/assets/css/formidable2rdb.css
@@ -78,3 +78,12 @@ th#created_at {
 th#entry_id {
     width: 5%;
 }
+
+input[type=text]:disabled {
+    background: #dddddd;
+}
+
+.frm_help_column_enabled{
+    display: none;
+    color: #d54e21 !important;
+}
