Adding the scroll x into the action for lower resolution screens. Changing the notification of inactive license key

--- a/assets/css/formidable2rdb.css
+++ b/assets/css/formidable2rdb.css
@@ -87,3 +87,7 @@ input[type=text]:disabled {
     display: none;
     color: #d54e21 !important;
 }
+table.form-table.f2r_map_table.frm-no-margin {
+    display: block;
+    overflow-x: scroll;
+}
