Adding readme txt. Adding support to repeatable section. Correcting the error to show tooltip near to the correct chk.

--- a/assets/css/formidable2rdb.css
+++ b/assets/css/formidable2rdb.css
@@ -91,3 +91,6 @@ table.form-table.f2r_map_table.frm-no-margin {
     display: block;
     overflow-x: scroll;
 }
+.f2r_hidden_repeatable_section{
+    display: none;
+}
